qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent:latest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: qbittorrent-config
          mountPath: /config
        - name: data
          mountPath: /data/downloads
          subPath: downloads
      - name: gluetun
        image: qmcgaw/gluetun
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - name: wireguard-config-secret
          mountPath: /gluetun/wireguard
      volumes:
      - name: qbittorrent-config
        persistentVolumeClaim: 
          claimName: qbittorrent-config
      - name: data
        persistentVolumeClaim: 
          claimName: data
      - name: wireguard-config-secret
        secret:
          secretName: wireguard-config-secret
